[gd_scene load_steps=6 format=2]

[ext_resource path="res://TitleWorld.gd" type="Script" id=1]
[ext_resource path="res://images/mainTitle.png" type="Texture" id=2]
[ext_resource path="res://AdventureFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://TitleComputer.gd" type="Script" id=4]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )

[node name="TitleWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 440, 240 )
texture = ExtResource( 2 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 106.0
margin_top = 65.0
margin_right = 241.0
margin_bottom = 177.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 130, 100 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -14.5614 )
near = 2.67

[node name="CSGBox" type="CSGBox" parent="ViewportContainer/Viewport"]

[node name="Control" type="Control" parent="ViewportContainer/Viewport"]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 41.0

[node name="NumLab1" type="Label" parent="ViewportContainer/Viewport/Control"]
margin_right = 40.0
margin_bottom = 14.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.878431, 0.568627, 1 )
text = "100101011011011101001011101101001001011010011101001011010010011001101010010011011010011010110001101"

[node name="NumLab2" type="Label" parent="ViewportContainer/Viewport/Control"]
margin_left = -1036.0
margin_top = 26.0
margin_right = 142.0
margin_bottom = 45.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.878431, 0.568627, 1 )
text = "100101011011011101001011101101001001011010011101001011010010011001101010010011011010011010110001101"

[node name="NumLab3" type="Label" parent="ViewportContainer/Viewport/Control"]
margin_left = -876.0
margin_top = 54.0
margin_right = 302.0
margin_bottom = 73.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.878431, 0.568627, 1 )
text = "100101011011011101001011101101001001011010011101001011010010011001101010010011011010011010110001101"

[node name="NumLab4" type="Label" parent="ViewportContainer/Viewport/Control"]
margin_left = -90.0
margin_top = 80.0
margin_right = 1088.0
margin_bottom = 99.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.878431, 0.568627, 1 )
text = "100101011011011101001011101101001001011010011101001011010010011001101010010011011010011010110001101"
