class_name TitleComputer
extends Viewport

var moveSpeed1 : int = 1

onready var numLab1 : Label = $NumLab1
onready var numLab2 : Label = $NumLab2
onready var numLab3 : Label = $NumLab3
onready var numLab4 : Label = $NumLab4

onready var digitPool : Array


func _process (_delta):
	#	var tmpPost = numLab1.get_position_in_parent()
	pass
